--- a/cboard-service/src/main/resources/static/plugins/ckeditor/samples/old/inlineall.html
+++ b/cboard-service/src/main/resources/static/plugins/ckeditor/samples/old/inlineall.html
@@ -30,12 +30,12 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 				editor.on( 'configLoaded', function() {
 
 					// Remove unnecessary plugins to make the editor simpler.
-					org.cboard.cboardservice.config.removePlugins = 'colorbutton,find,flash,font,' +
+					editor.config.removePlugins = 'colorbutton,find,flash,font,' +
 						'forms,iframe,image,newpage,removeformat,' +
 						'smiley,specialchar,stylescombo,templates';
 
 					// Rearrange the layout of the toolbar.
-					org.cboard.cboardservice.config.toolbarGroups = [
+					editor.config.toolbarGroups = [
 						{ name: 'editing',		groups: [ 'basicstyles', 'links' ] },
 						{ name: 'undo' },
 						{ name: 'clipboard',	groups: [ 'selection', 'clipboard' ] },
